--- a/ftask/interface/board/templates/board/filter.html
+++ b/ftask/interface/board/templates/board/filter.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Task filtering{% endblock %}
+{% block title %}{% trans %}Task filtering{% endtrans %}{% endblock %}
 
 {% block containerclass %}container-fluid short-padding{% endblock %}
 
