--- a/ftask/interface/board/templates/board/list.html
+++ b/ftask/interface/board/templates/board/list.html
@@ -1,6 +1,6 @@
 {% extends "auth/profile.html" %}
 
-{% block title %}Board list{% endblock %}
+{% block title %}{% trans %}Board list{% endtrans %}{% endblock %}
 
 {% block header %}
 {% endblock %}
