--- a/ftask/templates/navbar.html
+++ b/ftask/templates/navbar.html
@@ -2,8 +2,8 @@
     <div class="navbar-inner">
         <a class="brand" href="{{ url_for('boardi.list_board') }}"><img src="{{ url_for('static', filename='img/logo-white.png') }}" alt="FTask"/></a>
         <ul class="nav">
-            <li {% if selected == "profile" %}class="active"{% endif %}><a href="{{ url_for('authi.profile') }}">Profile</a></li>
-            <li {% if selected == "board" %}class="active"{% endif %}><a href="{{ url_for('boardi.list_board') }}">Boards</a></li>
+            <li {% if selected == "profile" %}class="active"{% endif %}><a href="{{ url_for('authi.profile') }}">{% trans %}Profile{% endtrans %}</a></li>
+            <li {% if selected == "board" %}class="active"{% endif %}><a href="{{ url_for('boardi.list_board') }}">{% trans %}Boards{% endtrans %}</a></li>
         </ul>
         <div class="btn-group pull-right">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -11,9 +11,9 @@
             </a>
             <ul class="dropdown-menu">
                 <li> <a href="{{ url_for('authi.profile') }}">{{ g.user['username'] }}</a> </li>
-                <li> <a href="{{ url_for('boardi.list_board') }}">Boards</a> </li>
+                <li> <a href="{{ url_for('boardi.list_board') }}">{% trans %}Boards{% endtrans %}</a> </li>
                 <li class="divider"></li>
-                <li><a href="#" id="logout">Log Out</a></li>
+                <li><a href="#" id="logout">{% trans %}Log Out{% endtrans %}</a></li>
             <!-- dropdown menu links -->
             </ul>
         </div>
@@ -31,7 +31,7 @@
             return false;
         });
 
-        Ftask.form("#logout-form", function(data) { alert("ERROR"); });
+        Ftask.form("#logout-form", function(data) { alert("{% trans %}Error while sending data to the server{% endtrans %}"); });
         $('#gravatar-mini').html($.gravatar("{{ g.user['email'] }}", {'size': 30}));
     });
 </script>
